maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:12: error: ':' expected but ')' found.
  def isDirectionFree(dir):Boolean = {
                         ^PledgeMaze:54: error: identifier expected but '}' found.
} 
^